[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/totens/unknown.png" type="Texture" id=3]
[ext_resource path="res://assets/totens/BOTAO.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="unknown" type="Sprite" parent="."]
scale = Vector2( 4.8386, 4.8386 )
texture = ExtResource( 3 )
centered = false

[node name="Iniciar" type="TextureButton" parent="."]
anchor_left = 0.424
anchor_top = 0.133
anchor_right = 0.58
anchor_bottom = 0.225
margin_left = 25.92
margin_top = -0.499344
margin_right = 26.4001
margin_bottom = 1.14066
rect_scale = Vector2( 1.173, 1.458 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Iniciar"]
margin_left = 80.5409
margin_top = 26.3989
margin_right = 227.541
margin_bottom = 90.3989
custom_fonts/font = ExtResource( 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditos" type="TextureButton" parent="."]
anchor_left = 0.424
anchor_top = 0.074
anchor_right = 0.58
anchor_bottom = 0.166
margin_left = 25.92
margin_top = 358.233
margin_right = 26.4003
margin_bottom = 359.873
rect_scale = Vector2( 1.173, 1.458 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Creditos"]
margin_left = 52.3087
margin_top = 26.3046
margin_right = 254.309
margin_bottom = 90.3046
custom_fonts/font = ExtResource( 1 )
text = "Credits	"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="TextureButton" parent="."]
anchor_left = 0.424
anchor_top = 0.074
anchor_right = 0.58
anchor_bottom = 0.364
margin_left = 30.92
margin_top = 693.08
margin_right = 27.4
margin_bottom = 480.88
rect_scale = Vector2( 1.173, 1.458 )
texture_normal = ExtResource( 4 )

[node name="Label4" type="Label" parent="Sair"]
margin_left = 98.8089
margin_top = 28.1258
margin_right = 245.809
margin_bottom = 92.1258
custom_fonts/font = ExtResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Iniciar" to="." method="_on_Iniciar_pressed"]
[connection signal="pressed" from="Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
